Adding user agent string/